# contour

./: .cmake-params  CMakeLists.txt
contourd/: CMakeLists.txt
contourd/location/network-engines/networkmanager/: NetworkManagerQtNotifier.cpp  NetworkManagerQtNotifier.h
contourd/plugins/scripted/: CMakeLists.txt
contourd/plugins/scripted/links/: main.js
contourd/recommendation/: RecommendationEngine.cpp  RecommendationEngine.h  RecommendationItem.cpp  RecommendationItem.h  RecommendationManager.cpp  RecommendationManager.h  RecommendationScriptEngine.cpp  RecommendationScriptEngine.h  org.kde.contour.RecommendationManager.xml  recommendationmanager.cpp
contourd/recommendation/plugins/scripted/links/: main.js
contourd/recommendation/plugins/scripted/mediapause/: main.js
contourd/recommendation/sensors/dbus/: DBusSensor.cpp
plasma/applets/categorizedresources/contents/ui/: CategorizedResources.qml  ItemGroup.qml  ItemsList.qml
qtmobility-contacts-feeder/: CMakeLists.txt  QtContactsFeeder.cpp  QtContactsFeeder.h  QtContactsFeederPlugin.cpp  QtContactsFeederPlugin.h  QtContactsManager.cpp  QtContactsManager.h  QtContactsScorer.cpp  QtContactsScorer.h  activitymanager-plugin-qtmobilitycontactsfeeder.desktop  config-qtc.h.cmake  qtmobilitycontactsfeeder.cpp  qtmobilitycontactsfeederplugin.cpp  qtmobilitycontactsmanager.cpp
